--- a/Frontend Projects/01-single-page-cv/index.html
+++ b/Frontend Projects/01-single-page-cv/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chanyang Choi - Web Developer</title>
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Single Page CV of Austin Hill, a Software Engineer." />
+    <meta name="description" content="Single Page CV of Chanyang Choi, a Software Engineer." />
     <meta name="keywords" content="Frontend Developer, HTML, CSS, JavaScript, Resume, Web Development" />
     <meta name="author" content="Chanyang Choi" />
     <!-- Open Graph Meta Tags -->
