created new HTML website, and multiple pages

--- a/Frontend Projects/02-Basic HTML Website/index.html
+++ b/Frontend Projects/02-Basic HTML Website/index.html
@@ -3,9 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic HTML Website</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Single Page CV of Chanyang Choi, a Software Engineer." />
+    <meta name="keywords" content="Frontend Developer, HTML, CSS, JavaScript, Resume, Web Development" />
+    <meta name="author" content="Chanyang Choi" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Chanyang Choi - Software Engineer" />
+    <meta property="og:description" content="Single Page CV of Chanyang Choi, a Software Engineer." />
+    <meta property="og:type" content="website" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/Frontend Projects/images/favicon.ico">
 
-        <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 <h2>Chanyang Choi</h2>
@@ -14,10 +22,10 @@
 
 <section>
     <nav>
-        <a href="#Home">Home</a> |
-        <a href="#Projects">Projects</a> |
-        <a href="#Articles">Articles</a> |
-        <a href="#Contact">Contact</a>
+        <a href="html/homepage.html">Home</a> |
+        <a href="html/projects.html">Projects</a> |
+        <a href="html/articles.html">Articles</a> |
+        <a href="html/contact.html">Contact</a>
     </nav>
 </section>
 
