pushing html code. created nav and different pages. made contact form

--- a/Frontend Projects/02-Basic HTML Website/html/contact.html
+++ b/Frontend Projects/02-Basic HTML Website/html/contact.html
@@ -3,9 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+        <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
     <h1>Contact</h1>
+
+    <section>
+        <nav>
+            <a href="homepage.html">Home</a> 
+            <a href="projects.html">Projects</a> 
+            <a href="articles.html">Articles</a> 
+            <a href="contact.html">Contact</a>
+        </nav>
+    </section>
+
     <form>
         <label for="name">Name:</label><br>
         <input type="text" id="fname" name="fname"><br>
